--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,17 @@
         <link href="/style.css" rel="stylesheet">
     </head>
     <body>
-        <h1>Woohoo! I am working!</h1>
+        <div id="chat-room">
+            <h2>Chat Room</h2>
+            <div id="chat-window">
+                <div id="output"></div>
+                <div id="feedback"></div>
+            </div>
+            <input type="text" id="handle" placeholder="handle">
+            <input type="text" id="message" placeholder="Type your message here..">
+            <button id="send" >Send</button>
+        </div>
+
         <script src="chat.js"></script>
     </body>
 </html>
